[package]
name = "etest-derive"
description = "proc_macro part of 'etest'"
version = "0.2.0"
edition = "2021"
license = "GPL-3.0-or-later"
repository = "https://gitlab-ext.sigma-chemnitz.de/ensc/etest"
homepage = "https://github.com/ensc/etest"

[lib]
proc-macro = true

[dependencies]
etest-impl = { version = "0", path = "../etest-impl" }
