[package]
name = "etest-impl"
description = "Implementation of etest's proc_macro part"
version = "0.0.1"
edition = "2021"
license = "GPL-3.0-or-later"
repository = "https://gitlab-ext.sigma-chemnitz.de/ensc/etest"
homepage = "https://github.com/ensc/etest"

[dependencies]
litrs = { version = "0", default-features = false }
